# backend/docs/swagger.yaml
@@ -9,6 +9,13 @@ definitions:
     - id
     - new_access
     type: object
+  entities.ComplaintID:
+    properties:
+      id:
+        type: integer
+    required:
+    - id
+    type: object
   entities.FetchLevelStruct:
     properties:
       filter_params:
@@ -97,6 +104,13 @@ definitions:
     - message
     - reason
     type: object
+  entities.LevelComplaints:
+    properties:
+      level_complaints:
+        items:
+          $ref: '#/definitions/entities.LevelComplaint'
+        type: array
+    type: object
   entities.LevelFilterParams:
     properties:
       difficulty:
@@ -175,12 +189,42 @@ definitions:
     - reason
     - user_id
     type: object
+  entities.UserComplaints:
+    properties:
+      user_complaints:
+        items:
+          $ref: '#/definitions/entities.UserComplaint'
+        type: array
+    type: object
+  entities.UserSearchParams:
+    properties:
+      is_banned:
+        type: boolean
+      name:
+        type: string
+      offset:
+        type: integer
+      page_size:
+        type: integer
+    required:
+    - is_banned
+    - name
+    - offset
+    - page_size
+    type: object
   entities.UserUnban:
     properties:
       id:
         type: integer
     required:
     - id
+    type: object
+  entities.Users:
+    properties:
+      users:
+        items:
+          $ref: '#/definitions/entities.User'
+        type: array
     type: object
   handler.errorResponse:
     properties:
@@ -336,6 +380,200 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: Change access level
+      tags:
+      - admin
+  /admin/get-level-complaints:
+    get:
+      consumes:
+      - application/json
+      description: Get list of level complaints assigned to current admin. Available
+        only for moderators and admins
+      operationId: get-level-complaints
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.LevelComplaints'
+        "400":
+          description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure
+            of Access Token/No Access Token;'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired;
+            ERR_PERMISSION_DENIED - Not enough rights to perform the action'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get Level Complaints for moderator to process
+      tags:
+      - admin
+  /admin/get-user-complaints:
+    get:
+      consumes:
+      - application/json
+      description: Get list of user complaints assigned to current admin. Available
+        only for moderators and admins
+      operationId: get-user-complaints
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.UserComplaints'
+        "400":
+          description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure
+            of Access Token/No Access Token;'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired;
+            ERR_PERMISSION_DENIED - Not enough rights to perform the action'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get User Complaints for moderator to process
+      tags:
+      - admin
+  /admin/get-users:
+    get:
+      consumes:
+      - application/json
+      description: Get list of users with given params. Available only for moderators
+        and admins
+      operationId: get-users
+      parameters:
+      - description: Search params - name, isBanned, pages info
+        in: body
+        name: user_search_params
+        required: true
+        schema:
+          $ref: '#/definitions/entities.UserSearchParams'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Users'
+        "400":
+          description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure
+            of Access Token/No Access Token;'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired;
+            ERR_PERMISSION_DENIED - Not enough rights to perform the action'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Get Users with given params
+      tags:
+      - admin
+  /admin/process-level-complaint:
+    post:
+      consumes:
+      - application/json
+      description: Delete level complaint with given id. Available only for moderators
+        and admins
+      operationId: process-level-complaint
+      parameters:
+      - description: Complaint ID
+        in: body
+        name: complaint_id
+        required: true
+        schema:
+          $ref: '#/definitions/entities.ComplaintID'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure
+            of Access Token/No Access Token; ERR_ENTITY_NOT_FOUND - There is no complaint
+            with such id among the ones assigned to you'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired;
+            ERR_PERMISSION_DENIED - Not enough rights to perform the action'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Delete level complaint with given id
+      tags:
+      - admin
+  /admin/process-user-complaint:
+    post:
+      consumes:
+      - application/json
+      description: Delete user complaint with given id. Available only for moderators
+        and admins
+      operationId: process-user-complaint
+      parameters:
+      - description: Complaint ID
+        in: body
+        name: complaint_id
+        required: true
+        schema:
+          $ref: '#/definitions/entities.ComplaintID'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - Wrong structure
+            of Access Token/No Access Token; ERR_ENTITY_NOT_FOUND - There is no complaint
+            with such id among the ones assigned to you'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired;
+            ERR_PERMISSION_DENIED - Not enough rights to perform the action'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: Delete user complaint with given id
       tags:
       - admin
   /admin/unban-level:
